fix overflow issues

--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -31,7 +31,6 @@
 		margin: auto;
 		padding: 60px;
 		position: relative;
-		z-index: 1;
 		margin: 40px;
 		@media (max-width: 500px) {
 			text-align: center;
